# MCTuning

./: .gitignore  README.md
ipynb/: MET checks.ipynb  MPICutOff.ipynb  MonoJetNominal.ipynb  MonoJetReco.ipynb  MonoJetTruth.ipynb  Parametrized_vs_Generated.ipynb  README.md  YodaHelper.ipynb  yoda_helper.py
ipynb/.ipynb_checkpoints/: YodaHelper-checkpoint.ipynb
ipynb/inputs/ATLAS_2014_I1268975/: ATLAS_2014_I1268975.yoda  ipolhistos_10m_allobservables.yoda  ipolhistos_500k_allobservables.yoda  ipolhistos_500k_bias2sel.yoda  ipolhistos_500k_r0p4_first5.yoda  ipolhistos_500k_r0p4_first5_diff_weights.yoda
ipynb/inputs/ATLAS_2017_I1519428/: ATLAS_2017_I1519428.yoda  ipol_out_of_box.yoda
pythia/data/: ATLAS_2014_I1268975.cmnd  ATLAS_2014_I1268975_BiasedProduction.cmnd  ATLAS_2017_I1519428.cmnd  ATLAS_2017_I1519428_BiasedProduction.cmnd  atlas_detector_cfg.yoda  jer_cfg.json  pdsf_jobs_config.json  pythia_Wenu.cmnd  pythia_Wenu_for7TeVMeasurement.cmnd  pythia_Wmunu.cmnd  pythia_Wtaunu.cmnd  pythia_Zee_for7TeVMeasurement.cmnd  pythia_dm.cmnd  pythia_ttbar.cmnd  pythia_vv.cmnd  pythia_zee.cmnd  pythia_zmumu.cmnd  pythia_ztautau.cmnd  pythia_zvv.cmnd
pythia/python/: change_yoda.py  generate_pythia_events.sh  parameter.py  submit.py  tune_parameters.py  utils.py
pythia/python/data/: parameters.json
pythia/python/slurm_job_config/: job.json  parameters.json
pythia/src/: CMakeLists.txt  README.md  make.sh
pythia/src/data/: pythia_run.cmnd
pythia/src/libjsoncpp/: CMakeLists.txt  jsoncpp.cxx
pythia/src/test/: CMakeLists.txt  main37.cxx  main48.cxx  main85.cxx  main86.cxx  testEff.cxx  testJson.cxx  testLHEF.cxx  testMadGraph.cxx  testPythia8235MultiWeights.cxx  testUncertaintyList.cxx  testYoda.cxx
pythia/src/util/: CMakeLists.txt  pythia.cxx  pythia2lhe.cxx  pythia_evtgen_shower_lhe3.cxx  pythia_shower_ckkwL_merging.cxx  pythia_shower_lhe3.cxx  test.cxx  testJson.cxx  testYoda.cxx
rivet/analyses/: ATLAS_2017_I1519428.cc  ATLAS_2017_I1519428.info  ATLAS_2017_I1519428.plot  ATLAS_2017_I1519428.yoda  README.md  build.sh
rivet/analyses-dev/: ATLAS_2017_I1519428.cc  ATLAS_2017_I1519428.info  ATLAS_2017_I1519428.yoda  ATLAS_2017_I1599399.cc  ATLAS_2017_I1599399.info  ATLAS_2017_I1599399.plot  ATLAS_2017_I1599399.yoda  ATLAS_2017_I1635274.cc  ATLAS_2017_I1635274.cc.reco  ATLAS_2017_I1635274.cc.truth  ATLAS_2017_I1635274.info  ATLAS_2017_I1635274.plot  ATLAS_2017_I1635274.yoda  ATLAS_2017_I1635274_withSmearing.cc  build.sh  make.sh
rivet/analysis/: README.md
scripts/: add_classifier_output_batch_opt  add_classifier_output_batch_opt3  add_classifier_output_batch_opt4  add_classifier_output_batch_opt6  change_yoda.py  compare_Hmumu_Ntuple  compare_Hmumu_Ntuple_MT  compare_Hmumu_histograms  compare_Ntuples  compare_chi2  compare_yoda_files  flatten_Hmumu_Ntuples.cxx  flatten_Hmumu_Ntuples_BDT.cxx  get_evts.py  installHepPackages.sh  installHepPackagesOnCori.sh  make_mass_hist.py  mergeYoda.sh  normalized_yoda  plot_Hmumu_weight.py  plot_LHE_event_weight.py  post.sh  read_h5.py  removeParameter.py  run_100times.py  sens_vars4param.py  set_kernel.sh  setup.sh  slim_full_sim.cxx  tree2histo  tune.sh  validateTune.py
scripts/HmumuProductionScripts/offPeak/: run_BDT.sh  run_BDT_batch.sh  run_BDT_pp.sh  run_H5_evts.sh  run_merge.sh  run_shower.sh  slurm_shower.sh  smart_hadd.sh  submit_BDT_batch.sh
scripts/HmumuProductionScripts/onPeak/: run_BDT.sh  run_mcWeights.sh  run_merge.sh  run_shower.sh
yoda/: compare.py
